# MyCC

./: README.md
src/main/: CMakeLists.txt
src/main1/: ast.hpp  sysy.l  sysy.y
src/main2/: ast.hpp
src/step1/main/: main.cpp  sysy.y
src/step1/main1/: ast.hpp  main.cpp  object.c
src/step1/main2/: CMakeLists.txt  main.cpp
src/step1/main3/: ast.hpp
test/: a  test.c  test.ll  test_v  test_v.s  test_x86  test_x86.s
